# ffxiv-sqpack-reader

./: .gitignore  .ripgreprc  Makefile  README.md  conftest.py  evaluate_main.py  main.py  main_ui.py  pyproject.toml  requirements.txt  sqpack_inspect_index.py  sqpack_inspect_index2.py
.github/workflows/: build.yml
Definitions/: AOZContent.json  ActionTimeline.json  Adventure.json  Aetheryte.json  BannerBg.json  BannerDecoration.json  BannerFacial.json  BannerFrame.json  BannerTimeline.json  BeastTribe.json  CSBonusContent.json  CSBonusContentIdentifier.json  CSBonusContentType.json  CSBonusMission.json  CSBonusMissionType.json  CSBonusSeason.json  CSBonusTextData.json  CabinetCategory.json  CharaCardBase.json  CharaCardDecoration.json  CharaCardDesignCategory.json  CharaCardHeader.json  CharaMakeName.json  ClassJob.json  ClassJobCategory.json  ContentFinderCondition.json  ContentNpc.json  ContentRoulette.json  ContentsTutorial.json  CraftLevelDifference.json  DawnGrowMember.json  DeepDungeon.json  DeepDungeonDemiclone.json  ENpcBase.json  ENpcDressUpDress.json  EurekaDungeonPortal.json  EventIconPriorityPair.json  FGSAddon.json  FGSStageUI.json  FateProgressUI.json  (+60 more)
app/: config.py  model.py  sqpack.py  utils.py
app/ctype_structure/: __init__.py
app/excel/: __init__.py  ex_header.py  ex_list.py  exd_handler.py
app/excel/definition/: __init__.py  data.py  sheet.py
app/se_string/: __init__.py  cursor.py  error.py  evaluator.py  expression.py  macro_kind.py  packed.py  payload.py  type.py
app/se_string/format/: __init__.py
app/tests/: __init__.py  bench.py  model_test.py  se_string_test.py  utils_test.py
app/ui/: main_window.py  settings_dialog.py
config/: .env
