[tool.poetry]
name = "ffxiv-patcher-py"
version = "0.1.0"
description = ""
authors = ["carbuncle0228 <carbuncle0228@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    '.git',
    '__pycache__',
    'venv',
    '.venv',
]
line-length = 88
lint.ignore = ['E501']
lint.select = [
    'E',
    'F',
    'W',
]

