[tool.poetry]
name = "ffxiv-patcher-py"
version = "0.1.0"
description = ""
authors = ["carbuncle0228 <carbuncle0228@gmail.com>"]
license = "GPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.3.4"
orjson = "^3.10.6"
anytree = "^2.12.1"
pandas = "^2.2.2"
nuitka = "^2.6.8"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-benchmark = "^4.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    '.git',
    '__pycache__',
    'venv',
    '.venv',
]
line-length = 88
lint.ignore = ['E501']
lint.select = [
    'E',
    'F',
    'W',
]

