[tool.poetry]
name = "ffxiv-patcher-py"
version = "0.1.0"
description = ""
authors = ["carbuncle0228 <carbuncle0228@gmail.com>"]
license = "GPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.3.4"
orjson = "^3.10.6"
nuitka = "^2.6.8"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-benchmark = "^4.0.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    '.git',
    '__pycache__',
    'venv',
    '.venv',
]

line-length = 88
lint.ignore = ['E501']
lint.select = [
    'E',
    'F',
    'I',
    'W',
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"